--- a/test/src/views/Home/Home.scss
+++ b/test/src/views/Home/Home.scss
@@ -102,7 +102,7 @@
       align-items: center;
       flex-direction: row;
       flex-wrap: wrap;
-      .our_products_product{
+      .our_character{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -112,7 +112,7 @@
         margin: 1em;
         border-radius: 6px;
         box-shadow: 0 8px 12px rgba(0, 0, 0, .7);
-        .our_products_image{
+        .our_character_image{
           width: 300px;
           height: 300px;
           object-fit: cover;
@@ -137,7 +137,7 @@
             opacity: 1;
             border-radius: 6px;
           }
-          .background_title{
+          .background_name{
             text-align: center;
             color: white;
             width: 90%;
