--- a/test/src/components/Navbar/Navbar.scss
+++ b/test/src/components/Navbar/Navbar.scss
@@ -2,8 +2,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: auto;
-    width: 90%;
+    position: fixed;
+    width: 100%;
+    padding-left: 1em;
+    padding-right: 1em;
+    background-color: rgb(180, 180, 180);
+    box-shadow: 0 2px 12px rgba(0, 0, 0, .7);
+    z-index: 1000;
+    top: 0;
     .NavbarIcon {
         width: 2em;
         height: 2em;
