--- a/test/src/views/Detail/Detail.scss
+++ b/test/src/views/Detail/Detail.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 2em;
+    margin-top: 5.5em;
     .card-detail-all{
         width: 20em;
         height: 100%;
@@ -12,7 +12,18 @@
         &:hover{
             transform: scale(1.1); 
             transition: all 0.6s;
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.145);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+        .card-id{
+            position: absolute;
+            margin-left: 1em;
+            margin-top: .3em;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: .9em;
+            font-weight: bold;
+            text-align: end;
+            color: red;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         .card-detail-image{
             width: 20em;
@@ -22,27 +33,40 @@
         }
         .card-detail-desc{
             width: 100%;
-            padding: .5em;
+            padding: .3em;
             .card-desc-name{
-                font-size: 1.8em;
+                width: 100%;
+                height: 100%;
+                background-color: rgb(76, 76, 76);
+                padding: .5em;
+                font-size: 1em;
                 font-weight: bold;
                 text-align: center;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+                color: white;
+                text-shadow: 2px 2px 4px rgba(65, 65, 65, 0.5);
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             }
             .card-desc-desc{
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-size: .8em;
+                font-size: .7em;
                 font-weight: bold;
                 text-align: start;
             }
-            .card-desc-id{
+            .card-desc-count{
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-size: 1em;
+                font-size: .7em;
                 font-weight: bold;
-                text-align: end;
-                color: red;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+                color: white;
+                text-align: center;
+                margin-top: .5em;
+                background-color: rgb(76, 76, 76);
+            }
+            .card-desc-characters{
+                font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-size: .8em;
+                font-weight: bold;
+                text-align: start;
+                color: black;
             }
             .card-detail-buttons{
                 display: flex;
