--- a/test/src/views/Home/Home.scss
+++ b/test/src/views/Home/Home.scss
@@ -1,11 +1,15 @@
 .containerHome {
-  display: flex;
+  display:flex;
   flex-direction: column;
   flex-wrap: wrap;
   width: 100%;
   max-width: none;
-  margin: auto;
-
+  @media screen and (max-width: 768px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
   .containPaginate {
     display: flex;
     justify-content: space-around;
@@ -14,10 +18,13 @@
     flex-wrap: wrap;
     border-radius: 25px;
     width: 100%;
-    margin-top: 1em;
+    margin-top: 3em;
     color: black;
     font-weight: bold;
     cursor: default;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
     .titleText{
       flex-direction: column;
       .text {
@@ -40,6 +47,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         color: red;
+        @media screen and (max-width: 768px){
+          text-align: center;
+        }
       }
     }
 
@@ -65,27 +75,27 @@
         text-overflow: ellipsis;
       }
 
-    .buttons {
-      display: flex;
-      justify-content: flex-start;
-      border-radius: 10px;
-
-      .prev,
-      .next {
-        background-color: transparent;
-        border: 1px solid;
+      .buttons {
+        display: flex;
+        justify-content: flex-start;
         border-radius: 10px;
-        font-weight: bold;
-        margin: .1em;
-      }
 
-      .prev:hover,
-      .next:hover {
-        background-color: #302200;
-        color: #f4e5c2;
-        border-radius: 10px;
+        .prev,
+        .next {
+          background-color: transparent;
+          border: 1px solid;
+          border-radius: 10px;
+          font-weight: bold;
+          margin: .1em;
+        }
+
+        .prev:hover,
+        .next:hover {
+          background-color: #302200;
+          color: #f4e5c2;
+          border-radius: 10px;
+        }
       }
-    }
     }
   }
 
@@ -93,15 +103,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2em;
     width: 100%;
     height: 100%;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      margin: auto;
+    }
+    
     .Box {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       flex-direction: row;
       flex-wrap: wrap;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        margin: auto;
+      }
     }
   }
 }
