--- a/test/src/views/Detail/Detail.scss
+++ b/test/src/views/Detail/Detail.scss
@@ -9,6 +9,9 @@
         height: 100%;
         box-shadow: 0 8px 12px rgba(0, 0, 0, .7);
         cursor: pointer;
+        @media screen and (max-width: 768px){
+            margin-bottom: 15em;
+        }
         &:hover{
             transform: scale(1.1); 
             transition: all 0.6s;
