--- a/test/src/views/Home/Home.scss
+++ b/test/src/views/Home/Home.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   width: 100%;
   max-width: none;
+  margin-bottom: 2em;
   @media screen and (max-width: 768px) {
     display: flex;
     justify-content: center;
