--- a/test/src/views/Home/Home.scss
+++ b/test/src/views/Home/Home.scss
@@ -58,13 +58,11 @@
     .paginate {
       border-radius: 20px;
       backdrop-filter: blur(10px);
-      border: 3px solid rgb(0, 0, 0);
-      box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
-      background-color: rgba(0, 0, 0, 0.1);
       padding: 5px;
       display: flex;
       justify-content: space-around;
-      align-items: flex-end;
+      align-items: center;
+      flex-direction: column-reverse;
       font-size: 20px;
       width: 10em;
 
@@ -85,15 +83,15 @@
         .prev,
         .next {
           background-color: transparent;
-          border: 1px solid;
+          border: 1px solid red;
           border-radius: 10px;
-          font-weight: bold;
           margin: .1em;
+          color: rgb(105, 105, 105);
         }
 
         .prev:hover,
         .next:hover {
-          background-color: #302200;
+          background-color: rgba(153, 10, 10, 0.5);
           color: #f4e5c2;
           border-radius: 10px;
         }
