Update/detail-description

--- a/test/src/views/Detail/Detail.scss
+++ b/test/src/views/Detail/Detail.scss
@@ -5,10 +5,11 @@
     width: 100%;
     margin-top: 5.5em;
     .card-detail-all{
-        width: 60em;
+        width: 25em;
         height: 100%;
         box-shadow: 0 8px 12px rgba(0, 0, 0, .7);
         cursor: pointer;
+        margin-bottom: 3em;
         @media screen and (max-width: 768px){
             margin-bottom: 15em;
             width: 15em;
@@ -30,7 +31,7 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         .card-detail-image{
-            width: 32em;
+            width: 25em;
             height: 20em;
             object-fit: cover;
             object-position: center;
